Working on homepage styling

--- a/details.html
+++ b/details.html
@@ -76,7 +76,14 @@
               <li>The <a href="http://www.silvercloud.com/portland/">Silver Cloud Inn</a> is closest to the wedding venue, but still walkable to trendy 23rd street.  And close to Forest Park if you want to run or explore.</li>
               <li>If, like the groom, you prefer the anonymity of a major chain (as well as the free continental breakfast), the <a href="http://www.hiexpress.com/hotels/us/en/portland/pdxor/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn&qChld=0&qFRA=1&qGRM=0&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=12&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99504425&siclientid=10073&sitrackingid=694721510&dp=true&icdv=99504425">NW Holiday Inn Express</a> might be right up your alley!</li>
             </ul>
-            Be sure to check services like <a href="http://www.airbnb.com">airbnb</a> or <a href="http://www.vrbo.com">vrbo</a> for other options!
+            Be sure to check services like <a href="http://www.airbnb.com">airbnb</a> or <a href="http://www.vrbo.com">vrbo</a> for other options!<br />
+          <br />
+          <u><h3>Our Registry</u>&nbsp;&nbsp;&nbsp;<small>Gifts are Optional</small></h3>
+          Gifts are absolutely optional, but if you insist, we are registered at:
+            <ul>
+              <li><a href="http://www.rei.com/GiftRegistryDetails/GR112988753">REI</li>
+              <li><a href="http://www.crateandbarrel.com/gift-registry/ashley-boyle-and-joe-driscoll/r5309424">Crate and Barrel</a></li>
+            </ul>
         </div>
         </div>
 
@@ -84,24 +91,31 @@
 
         <div class="main-row">
         <div class="main-fifty">
-          <u><h3>About Town</u>&nbsp;&nbsp;&nbsp;<small>Explore Portland</small></h3>
+          <u><h3>Schedule</u>&nbsp;&nbsp;&nbsp;<small>What's happening</small></h3>
+          Friday, September 11
+          <ul>
+            <li>Early Evening: Rehersal Dinner<br />
+              Family and out of town guests are invited, details to follow</li>
+          </ul>
+          Saturday, September 12
+          <ul>
+            <li>4:30pm - Wedding ceremony begins</li>
+            <li>5pm to 6pm - Cocktail hour.  Margaritas, Beer, Wine, Appetizers</li>
+            <li>6pm - First Dance</li>
+            <li>11pm - Last Dance</li>
+          </ul>
+        </div>
+
+        <div class="main-clear"></div>
+
+        <div class="main-fifty">
+          <u><h3>Around Town</u>&nbsp;&nbsp;&nbsp;<small>Explore Portland</small></h3>
           If you have time while you're in town, be sure to check out something cool
             <ul>
               <li><a href="http://www.powells.com">Powell's City of Books</a>- an entire city block of books!</li>
               <li>Coming in on Thursday the 9th?  Plan ahead and get tickets to a <a href="http://www.timbers.com">Timbers home game</a> (buy early or take your chances)!</li>
               <li><a href="https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID=127">Forest Park</a> is the biggest urban greenspace in the US- it's cool.  Go for a jog or hike and be astounded by trees and dirt!</li>
               <li>If you're in town for a few days, a short drive to Mt. Hood's <a href="http://www.timberlinelodge.com">Timberline Lodge</a> won't disappoint.  All work and no play makes Jack a dull boy!</li>
-            </ul>
-        </div>
-
-        <div class="main-clear"></div>
-
-        <div class="main-fifty">
-          <u><h3>Our Registry</u>&nbsp;&nbsp;&nbsp;<small>Buy Us Stuff</small></h3>
-          We've been told it's customary to ask for stuff when getting married.  This is not required, but if you really want to, you can check out our registry at:
-            <ul>
-              <li><a href="http://www.rei.com/GiftRegistryDetails/GR112988753">REI</li>
-              <li><a href="http://www.crateandbarrel.com/gift-registry/ashley-boyle-and-joe-driscoll/r5309424">Crate and Barrel</a></li>
             </ul>
         </div>
         </div>
