Added parallax pictures section, working on homepage effects (still)

--- a/travels.html
+++ b/travels.html
@@ -4,13 +4,12 @@
 
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,IE=edge, chrome=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="assets/images/favicon.ico">
 
-    <title>Ash & Joe | Wedding!</title>
+    <title>Ash & Joe | Travels</title>
 
     <!-- Bootstrap core CSS and custom styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -24,7 +23,7 @@
     <![endif]-->
   </head>
 
-  <body class="flower">
+  <body>
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -41,7 +40,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse nav-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="details.html">Details</a></li>
             <li><a href="guestbook.html">Guestbook</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
@@ -52,40 +51,83 @@
     </nav>
 
     <!-- Begin page content -->
-    <div class="container-fluid center">
-      <div id="skip" class="skip">Skip Intro</div>
+<!--     <div class="container-fluid center">
       <div class="page-header">
+        <p class="fancy lg vertshrink">Our Travels</p>
+      </div> -->
 
-        <h1>Together with their families</h1>
-      </div>
-      <p class="fancy lg">
-        <div class='main-name fancy lg' id="joe-title">Joseph Charles Driscoll</div>
-        <div class='main-name fancy lg' id="and-title">&</div>
-        <div class='main-name fancy lg' id="ash-title">Ashley Owen Boyle</div>
-      </p>
+      <div class="parallax-container">
 
-        <p id="request-text">Request your presence at the ceremony & celebration of their marriage.<br />Saturday, September 12, 2015, 4:30pm at Bladberry Farm in Portland, Oregon</p>
-
-        <div class="badge-row" id="badge-row">
-          <a class="circle-badge-crested-lg" href="rsvp.html">
-            <!-- <div class="circle-badge-crested-lg">
-              <div class="sub-circle-text">Rsvp</div>
-            </div> -->
-            Rsvp
-          </a>
-          <a class="circle-badge-adams-lg" href="details.html">
-            <!-- <div class="circle-badge-adams-lg">
-                <div class="sub-circle-text">Details</div>
-            </div> -->
-            Details
-          </a>
-          <a class="circle-badge-wallowas-lg" href="guestbook.html">
-            <!-- <div class="circle-badge-wallowas-lg">
-                <div class="sub-circle-text">Guestbook</div>
-            </div> -->
-            Guestbook
-          </a>
+        <div class="timberline">
+          <div class="parallax-caption trans-white">
+            Skiing at Timberline
+            <div class="parallax-caption-sub">Mt. Hood didn't see a lot of snow this year, but we did get up for a couple sessions of Ash's favorite activity.</div>
+          </div>
         </div>
+        <div class="wallowas">
+          <div class="parallax-caption">
+            Wallowa Mountains
+            <div class="parallax-caption-sub">Hidden in NE Oregon, the Wallowa Mountains were absolutely beautiful last summer.  Speaking of beautiful...</div>
+          </div>
+        </div>
+        <div class="wallowas-summit">
+          <div class="parallax-caption">
+            Eagle Cap Summit
+            <div class="parallax-caption-sub">Half running, half scrambling across snow fields, our hike to the peak of Eagle Cap is one of our favorite memories from last summer.</div>
+          </div>
+        </div>
+        <div class="mtadams">
+          <div class="parallax-caption">
+            Mt. Adams
+            <div class="parallax-caption-sub">We celebrated the 4th of July, 2014 by making a Summer ascent of Mt. Adams, followed by a ski down.  Sunburns were had by all.</div>
+          </div>
+        </div>
+        <div class="shadow">
+          <div class="parallax-caption">
+            Portland Beer Bus
+            <div class="parallax-caption-sub">Shadow spent some time at our home this year (aka Bluebell Cottage).  He wanted to go to Captured By Porches and sit outside, so we were forced to go too.
+            </div>
+          </div>
+        </div>
+        <div class="pcg">
+          <div class="parallax-caption">
+            Portland City Grill
+            <div class="parallax-caption-sub">Happy hour at the top of the town.</div>
+          </div>
+        </div>
+        <div class="maine-lobster">
+          <div class="parallax-caption">
+            Maine
+            <div class="parallax-caption-sub">She's got the catch of the day!  Late summer in Maine for a friend's wedding.</div>
+          </div>
+        </div>
+        <div class="vancouver">
+          <div class="parallax-caption">
+            Vancouver
+            <div class="parallax-caption-sub">Ash crushed the Vancouver half marathon, Joe did a great job of watching.</div>
+          </div>
+        </div>
+        <div class="crested-butte">
+          <div class="parallax-caption">
+            Crested Butte
+            <div class="parallax-caption-sub">The Dobwoods wedding in Colorado.  Incredible views.  Or maybe we were just hallucinating at 9000ft of altitude.</div>
+          </div>
+        </div>
+        <div class="trail-falls">
+          <div class="parallax-caption">
+            Trail Running
+            <div class="parallax-caption-sub">Eagle Creek trail out to Curtain Falls.  A long day on the trails made worth it by views like these.</div>
+          </div>
+        </div>
+        <div class="pacific-city">
+          <div class="parallax-caption">
+            Pacific City
+            <div class="parallax-caption-sub">We brought 2013 to a close in Ash's second hometown on the Oregon coast.</div>
+            </div>
+        </div>
+        <div id="backToTop" title="Back To Top">&#9650;</div>
+      </div><!--End of parallax container-->
+
     </div>
 
 <!-- Modal -->
@@ -121,15 +163,11 @@
       </div>
     </div>
 
-    <footer class="footer">
+<!--     <footer class="footer">
       <div class="container">
-        <p class="text-muted">
-          <a data-toggle="modal" data-target="#myModal" class="pointer">Contact Us</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="travels.html">Our Travels</a>
-        </p>
+        <p class="text-muted">Having trouble?&nbsp;&nbsp;&nbsp;&nbsp;<a data-toggle="modal" data-target="#myModal" class="pointer">Contact Us</a></p>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap core JavaScript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -139,114 +177,6 @@
     <script src="assets/js/ie10-bug-workaround.js"></script>
     <script>
     $(document).ready(function() {
-      //intro effects
-      $('#skip').on('click', function() {
-        $('#joe-title, #and-title, #ash-title, #request-text, #badge-row').css('opacity', '1.0');
-        $(this).hide();
-      });
-
-        $('#joe-title').fadeTo(1000, 1.0, function() {
-          $('#and-title').fadeTo(1000, 1.0, function() {
-            $('#ash-title').fadeTo(1000, 1.0, function() {
-              $('#request-text').fadeTo(1500, 1.0, function() {
-                var timer0 = setTimeout(function() {
-                  $('#badge-row').fadeTo(2000, 1.0);
-                  $('.skip').fadeOut(2000);
-                }, 1500);
-              });
-            });
-          });
-        });
-      });
-
-    //main hover sizing
-    // function resetSize() {
-    //   $('.circle-badge-adams-lg, .circle-badge-wallowas-lg, .circle-badge-crested-lg')
-    //     .animate({
-    //       width: '33%'
-    //     }, {
-    //       duration: 0,
-    //       easing: 'linear',
-    //       queue: false
-    //     });
-    //   }
-
-  if(window.innerWidth > 1000) {
-    $('.circle-badge-crested-lg').mouseover(
-      function() {
-        $('.circle-badge-adams-lg, .circle-badge-wallowas-lg')
-          .animate({
-            width: '25%'
-          }, {
-            duration: 100,
-            easing: 'linear',
-            queue: false
-          });
-        $('.circle-badge-crested-lg').animate({
-          width: '40%'
-        }, {
-          duration: 300,
-          easing: 'linear',
-          queue: false
-        });
-      });
-    // , function() {
-    //       if($('.badge-row').not(':hover')) {
-    //         console.log('out of badge row');
-    //         resetSize();
-    //       }
-    //     });
-
-    $('.circle-badge-adams-lg').mouseover(
-      function() {
-        $('.circle-badge-crested-lg, .circle-badge-wallowas-lg')
-          .animate({
-            width: '25%'
-          }, {
-            duration: 100,
-            easing: 'linear',
-            queue: false
-          });
-        $('.circle-badge-adams-lg').animate({
-          width: '40%'
-        }, {
-          duration: 300,
-          easing: 'linear',
-          queue: false
-        });
-      });
-    // , function() {
-    //       if($('.badge-row').not(':hover')) {
-    //         console.log('out of badge row');
-    //         resetSize();
-    //       }
-    //     });
-
-    $('.circle-badge-wallowas-lg').mouseover(
-      function() {
-        $('.circle-badge-adams-lg, .circle-badge-crested-lg')
-          .animate({
-            width: '25%'
-          }, {
-            duration: 100,
-            easing: 'linear',
-            queue: false
-          });
-        $('.circle-badge-wallowas-lg').animate({
-          width: '40%'
-        }, {
-          duration: 300,
-          easing: 'linear',
-          queue: false
-        });
-        });
-    // , function() {
-    //       if($('.badge-row').not(':hover')) {
-    //         console.log('out of badge row');
-    //         resetSize();
-    //       }
-    //     });
-  }
 
     //contact form submission
     $('#contact').on('submit', function(e) {
@@ -274,6 +204,13 @@
       document.getElementById('contact').reset();
       $('#contact-form').show();
     });
+
+    $('#backToTop').on('click', function() {
+      $('html, body').animate({scrollTop: 0}, 5000, 'swing');
+      return false;
+    });
+
+  });
     </script>
   </body>
 </html>
