Added new pictures to travels page

--- a/travels.html
+++ b/travels.html
@@ -58,10 +58,22 @@
 
       <div class="parallax-container">
 
-        <div class="timberline">
+        <div class="cascade-sunset">
           <div class="parallax-caption trans-white">
+            Out on a Ledge
+            <div class="parallax-caption-sub">First camp of summer 2015.  Killen Creek Trail, 6000ft up Mt. Adams (looking at Mt. Rainer).</div>
+          </div>
+        </div>
+        <div class="timberline">
+          <div class="parallax-caption">
             Skiing at Timberline
             <div class="parallax-caption-sub">Mt. Hood didn't see a lot of snow this year, but we did get up for a couple sessions of Ash's favorite activity.</div>
+          </div>
+        </div>
+        <div class="ashinatree">
+          <div class="parallax-caption">
+            Lady in a Tree
+            <div class="parallax-caption-sub">Rarely seen in her natural habitat, this procedure is called 'Owling'.</div>
           </div>
         </div>
         <div class="wallowas">
