Added dinner time

--- a/details.html
+++ b/details.html
@@ -101,7 +101,8 @@
           <ul>
             <li>4:30pm - Wedding ceremony begins</li>
             <li>5pm to 6pm - Cocktail hour.  Margaritas, Beer, Wine, Appetizers</li>
-            <li>6pm - First Dance</li>
+            <li>6pm - Dinner</li>
+            <li>6:30pm ish - First Dance</li>
             <li>11pm - Last Dance</li>
           </ul>
         </div>
