Added latest news section

--- a/details.html
+++ b/details.html
@@ -27,7 +27,7 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top purple-gradient">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -57,11 +57,13 @@
         <p class="fancy lg vertshrink">Event Details</p>
       </div>
 
+      <p>More details now available!  <a href="news.html">Click here for updates from July 6, 2015.</a></p>
+
         <!--Start of Row 1-->
 
         <div class="main-row">
         <div class="main-fifty">
-          <u><h3>Find Us</u>&nbsp;&nbsp;&nbsp;<small>Directions to the farm</small></h3>
+          <h3>Find Us&nbsp;&nbsp;&nbsp;<small>Directions to the farm</small></h3>
           The wedding will be held at Bladberry Farm on Sauvie Island.  It's a beautiful, quiet place without a website, but can be found using the Google Map below<br />
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5579.582073245346!2d-122.794273!3d45.63493400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a9c2d78a7d7d%3A0x7ae55931e8bff377!2s15620+NW+Gillihan+Rd%2C+Portland%2C+OR+97231!5e0!3m2!1sen!2sus!4v1426120505139" width="100%" height="300" style="border-radius: 5px;" frameborder="0" style="border:0"></iframe>
         </div>
@@ -69,16 +71,16 @@
         <div class="main-clear"></div>
 
         <div class="main-fifty">
-          <u><h3>Lodging</u>&nbsp;&nbsp;&nbsp;<small>Where to stay</small></h3>
+          <h3>Lodging&nbsp;&nbsp;&nbsp;<small>Where to stay</small></h3>
           Portland is an amazing city with a whole lot of awesome things to do.  The venue is about 15 minutes Northwest of town, so we've provided some recommended hotels in NW Portland.
             <ul>
               <li>The <a href="http://www.northrupstation.com/">Inn at Northrup Station</a> is in the heart of NW Portland.  Quirky.  Pet Friendly.  Portland.</li>
-              <li>The <a href="http://www.silvercloud.com/portland/">Silver Cloud Inn</a> is closest to the wedding venue, but still walkable to trendy 23rd street.  And close to Forest Park if you want to run or explore.</li>
+              <li>The <a href="http://www.silvercloud.com/portland/">Silver Cloud Inn</a> is technically closest to the wedding venue, but still walkable to trendy 23rd street.  And close to Forest Park if you want to run or explore.</li>
               <li>If, like the groom, you prefer the anonymity of a major chain (as well as the free continental breakfast), the <a href="http://www.hiexpress.com/hotels/us/en/portland/pdxor/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn&qChld=0&qFRA=1&qGRM=0&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=12&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99504425&siclientid=10073&sitrackingid=694721510&dp=true&icdv=99504425">NW Holiday Inn Express</a> might be right up your alley!</li>
             </ul>
             Be sure to check services like <a href="http://www.airbnb.com">airbnb</a> or <a href="http://www.vrbo.com">vrbo</a> for other options!<br />
           <br />
-          <u><h3>Our Registry</u>&nbsp;&nbsp;&nbsp;<small>Gifts are Optional</small></h3>
+          <h3>Our Registry&nbsp;&nbsp;&nbsp;<small>Gifts are Optional</small></h3>
           Gifts are absolutely optional, but if you insist, we are registered at:
             <ul>
               <li><a href="http://www.rei.com/GiftRegistryDetails/GR112988753">REI</li>
@@ -91,7 +93,7 @@
 
         <div class="main-row">
         <div class="main-fifty">
-          <u><h3>Schedule</u>&nbsp;&nbsp;&nbsp;<small>What's happening</small></h3>
+          <h3>Schedule&nbsp;&nbsp;&nbsp;<small>What's happening</small></h3>
           Friday, September 11
           <ul>
             <li>Early Evening: Rehersal Dinner<br />
@@ -110,7 +112,7 @@
         <div class="main-clear"></div>
 
         <div class="main-fifty">
-          <u><h3>Around Town</u>&nbsp;&nbsp;&nbsp;<small>Explore Portland</small></h3>
+          <h3>Around Town&nbsp;&nbsp;&nbsp;<small>Explore Portland</small></h3>
           If you have time while you're in town, be sure to check out something cool
             <ul>
               <li><a href="http://www.powells.com">Powell's City of Books</a>- an entire city block of books!</li>
