--- a/news.html
+++ b/news.html
@@ -56,10 +56,10 @@
       <div class="page-header mt-adams-bg">
         <p class="fancy lg vertshrink">Latest Updates</p>
         <small><em>Added 7/6/15</em></small>
+        <p style="margin: 25px auto 25px auto;padding: 15px;width: 95%;background-color: rgba(255,255,255,0.6);font-size: 120%;border-radius: 3px;">To those of you that we've already heard from, Thank you for RSVP'ing to our wedding!  We could not be more excited to have you present at our special day.  Please see below for some additional information.  Questions?  Use the contact option in the top right menu.  Looking for the original details page (with map to venue)?  <a href="details.html">Here it is!</a></p>
       </div>
 
       <div class="main-row side-margins">
-      <p>To those of you that we've already heard from, Thank you for RSVP'ing to our wedding!  We could not be more excited to have you present at our special day.  Please see below for some additional information.  Questions?  Use the contact option in the top right menu.  Looking for the original details page (with map to venue)?  <a href="details.html">Here it is!</a></p>
              <div class="main-fifty">
                 <p><h3>Schedule of Events</h3>
                 <strong>Thursday, September 10</strong><br />
@@ -68,7 +68,7 @@
                 <strong>Friday, September 11 during the day</strong><br />
                 For out-of-town guests, there is an endless list of ways to enjoy the summer in Oregon.  A few suggestions are as follows
                 <ul>
-                <li>A hike in the gorge.  Ashley recently did a 6 mile round trip hike to <a href="https://www.trails.com/tcatalog_trail.aspx?trailid=HGW277-026">Burnt Lake</a> and loved it!  She suggests bringing a sack lunch and your swimming suit.</li>
+                <li>A hike in the gorge:  Ashley recently did a 6 mile round trip hike to <a href="https://www.trails.com/tcatalog_trail.aspx?trailid=HGW277-026">Burnt Lake</a> and loved it!  She suggests bringing a sack lunch and your swimming suit.</li>
                 <li>Another hike in the gorge: Multnomah Falls never disappoints!  It is a short drive from downtown Portland.  For those interested in more of a hike, try the <a href="http://nwhiker.com/CGNSAHike12.html">Wahkeena Falls Loop</a>.</li>
                 <li>Visit Hood River:  Hood River is a beautiful hour-long drive from Portland.  It is a great spot for having lunch, exploring the town, and sampling some great beers.  Some of our favorite breweries are Double Mountain, Pfriem, Full Sail . . . and our absolute favorite. . . Everybody's Brewery.  Everybody's is located across the bridge in Washington State.  Added bonus!  Drive back to Portland on the Washington side of the gorge!  Worth it.<br />
                 <small><em>Editor's note: only worth it if you don't get stuck behind a slow moving truck.  The Washington side route is a 2 lane road for about 50 miles.</em></small></li>
@@ -82,7 +82,7 @@
                 Family and out-of-town guests are invited to dinner at Soames and Lincoln Wildgrube's home at <a href="https://www.google.com/maps/place/2811+SW+Rutland+Terrace,+Portland,+OR+97205/@45.5226236,-122.7074458,17z/data=!3m1!4b1!4m2!3m1!1s0x5495098b5c59b249:0x4e790ff4fe34a4e0">2811 SW Rutland Terr, Portland, OR 97205</a>.  Parking can be limited; carpooling is encouraged.<br />
                 <br />
                 <strong>Saturday, September 12 at 4:30</strong><br />
-                Ceremony, followed by cocktail hour, dinner and dancing.<br />
+                Ceremony, followed by <a href="https://www.youtube.com/watch?v=5YbjzztYbUo">cocktail</a> hour, dinner and dancing.<br />
                 <br />
                 <strong>Sunday, September 13</strong><br />
                 Do one of the activities you didn't do on Friday!</p>
