--- a/home.html
+++ b/home.html
@@ -102,9 +102,13 @@
           </div>
           <div class="modal-body">
 
-            <form id="contact" name="contact" action="contactus.php" method="POST" novalidate>
-              <input type="text" id="name" name="name" placeholder="Name"></input>
-              <input type="email" id="email" name="email" placeholder="Email"></input>
+            <form id="contact" name="contact" action="contactus.php" method="POST">
+              <input type="text" id="name" name="name" placeholder="Name" required></input>
+              <input type="email" id="email" name="email" placeholder="Email" required></input>
+              <div class="input-confirm">
+                    <label>Reply Please</label>
+                    <input type="checkbox" id="confirm" name="confirm" value="confirm" tabindex="-1" />
+                  </div>
               <textarea id="message" name="message" placeholder="How can we help?"></textarea>
 
                 </div>
@@ -129,6 +133,7 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-bug-workaround.js"></script>
+    <script src = "./assets/js/contact-handler.js"></script>
     <script>
     $(document).ready(function() {
       $('#skip').on('click', function() {
