--- a/travels.html
+++ b/travels.html
@@ -159,9 +159,13 @@
 
             <div id="contact-form">
               <div class="modal-body">
-                <form id="contact" name="contact" method="POST" target="_self" enctype="multipart/form-data" action="contactus.php" onsubmit="" novalidate>
-                  <input type="text" id="name" name="name" placeholder="Name"></input>
-                  <input type="email" id="email" name="email" placeholder="Email"></input>
+                <form id="contact" name="contact" method="POST" target="_self" enctype="multipart/form-data" action="contactus.php" onsubmit="">
+                  <input type="text" id="name" name="name" placeholder="Name" required></input>
+                  <input type="email" id="email" name="email" placeholder="Email" required></input>
+                  <div class="input-confirm">
+                    <label>Reply Please</label>
+                    <input type="checkbox" id="confirm" name="confirm" value="confirm" tabindex="-1" />
+                  </div>
                   <textarea id="message" name="message" placeholder="How can we help?"></textarea>
               </div>
 
@@ -187,42 +191,14 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-bug-workaround.js"></script>
+    <script src="./assets/js/contact-handler.js"></script>
     <script>
     $(document).ready(function() {
-
-    //contact form submission
-    $('#contact').on('submit', function(e) {
-      e.preventDefault();
-
-      $.ajax({
-        type: 'post',
-        url: 'contactus.php',
-        data: $('#contact').serialize(),
-        success: function(result) {
-          $('#contact-form').fadeOut(500, function() {
-            $('#contact-results').html(result);
-            $('#contact-thanks').fadeIn(500);
-          });
-          var timerContact = setTimeout(function() {
-            $('#myModal').modal('hide');
-          }, 7000);
-        }
+      $('#backToTop').on('click', function() {
+        $('html, body').animate({scrollTop: 0}, 5000, 'swing');
+        return false;
       });
-
     });
-
-    $('#myModal').on('hidden.bs.modal', function() {
-      $('#contact-thanks').hide();
-      document.getElementById('contact').reset();
-      $('#contact-form').show();
-    });
-
-    $('#backToTop').on('click', function() {
-      $('html, body').animate({scrollTop: 0}, 5000, 'swing');
-      return false;
-    });
-
-  });
     </script>
   </body>
 </html>
